<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/content_back_button" />

        <TextView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"/>

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_favorite_border_black_18dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_gravity="end"
            android:contentDescription="@string/content_favorite" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:contentDescription="@string/content_poster" />

    <TextView
        android:id="@+id/tv_title_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_movie_static"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_movie"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_static" />

    <TextView
        android:id="@+id/tv_date_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/release_date"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_static" />

    <TextView
        android:id="@+id/tv_desc_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_desc"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_static">

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="14sp" />
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>